# OCR

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
scripts/: preload_models.py
src/ocr_service/: main.py  pipeline.py  schemas.py
tests/: test_pipeline.py
